[package]
name = "greenhouse"
version = "0.1.6"
authors = ["Felipe Penha <felipe.penha@alumni.usp.br>"]
description = "A Rust containerized framework for a better Data X development workflow."
repository = "https://github.com/felipepenha/rust-greenhouse"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition= "2018"

[workspace]
members = ["src/*", "notebooks/*"]

[lib]
name = "foo"
path = "src/lib.rs"
crate-type = ["lib"]
test = true

[[bin]]
name = "script"
path = "src/main.rs"

[dependencies]
datafusion = "3.0.0"
arrow = "3.0.0"
plotly = { version = "0.6.0", features = ["kaleido"] }
rand = "0.8.3"
rand_distr = "0.4.0"
